home.html maquetado

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 </head>
 
 <body>
-  <section class="container">
-    <div class="row">
-      <img src="assets/img/lyft.png">
-    </div>
+  <section class="main">
+    
   </section>
   <!-- Scripts jQuery, materialize y propio-->
   <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
