--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lyft jquery</title>
+  <title>jQuery</title>
   <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link type="image/x" rel="shortcut icon" href="assets/img/favicon.ico">
   <link rel="stylesheet" href="css/main.css">
 </head>
 
